--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "bavix/flow-native": "^1.0",
     "bavix/foundation": "^1.0"
   },
+  "require-dev": {
+    "matthiasmullie/minify": "^1.3"
+  },
   "autoload": {
     "psr-4": {
       "Bavix\\": "src/"
