--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "bavix/foundation": "^1.0"
   },
   "require-dev": {
-    "matthiasmullie/minify": "^1.3"
+    "matthiasmullie/minify": "^1.3",
+    "symfony/yaml": "^3.3"
   },
   "autoload": {
     "psr-4": {
