--- a/lexemes/for.yml
+++ b/lexemes/for.yml
@@ -1,3 +1,5 @@
+closed: true
+
 properties:
   rows:
     types:
@@ -5,6 +7,7 @@ properties:
       - callable
       - array
       - ternary
+      - range
 
 syntax:
   - '{{ row }} in {{ rows }}'
