--- a/lexemes/for.yml
+++ b/lexemes/for.yml
@@ -13,3 +13,6 @@ syntax:
   - '{{ rows }} as {{ row }}'
   - '{{ rows }} as {{ key }} => {{ row }}'
   - '\({{ key }}, {{ row }}\) in {{ rows }}'
+
+directives:
+  forelse:
