--- a/lexemes/if.yml
+++ b/lexemes/if.yml
@@ -6,6 +6,7 @@ properties:
       - any
 
 syntax:
+  - '\({{ args }}\)'
   - '{{ args }}'
 
 directives:
@@ -17,6 +18,7 @@ directives:
           - any
 
     syntax:
+      - '\({{ args }}\)'
       - '{{ args }}'
 
   else:
