--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "require": {
     "bavix/flow-native": "^1.0",
     "symfony/yaml": "^3.3",
-    "bavix/lexer": "^1.0"
+    "bavix/lexer": "^1.0",
+    "psr/cache": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -19,6 +20,7 @@
     }
   },
   "require-dev": {
-    "mrclay/minify": "^3.0"
+    "mrclay/minify": "^3.0",
+    "tedivm/stash": "^0.14.2"
   }
 }
