--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,14 @@
+plugins:
+  phpcodesniffer:
+    enabled: true
+
 engines:
   sonar-php:
     enabled: true
     config:
       tests_patterns:
         - tests/**
+
 exclude_paths:
   - build/
   - config/
